# chop-compiler

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: milestones-cchop.yaml  milestones-ichop.yaml  milestones.yaml  trunk-gh-page.yaml  unit_tests.yaml
cchop/: Cargo.toml
cchop/src/: link.rs  main.rs
cchop/src/llvm/: buildins.rs  mod.rs
chop-lang-support/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
chop-lang-support/syntaxes/: chop.tmLanguage.json
chop_compiler/: Cargo.toml
chop_compiler/src/: main.rs
compiler/: Cargo.toml
compiler/src/: lexer.rs  lib.rs  tokens.rs
core/: Cargo.toml
core/src/: README.md  ast.rs  bytecode.rs  declaration.rs  error.rs  generator.rs  lexer.rs  lib.rs  macros.rs  parser.rs  simplifier.rs  specializer.rs  token.rs
examples/: hello-world.ch
ichop/: Cargo.toml
ichop/app/: Cargo.toml
ichop/app/src/: main.rs
ichop/eval/: Cargo.toml
ichop/src/: evaluation.rs  main.rs
interpreter/: Cargo.toml
interpreter/src/: main.rs
interpreter/src/compiler/: README.md  ast.rs  exporter.rs  generator.rs  lexer.rs  mod.rs  token.rs
interpreter/src/compiler/parser/: mod.rs
interpreter/src/evaluation/: mod.rs
milestones/: test.sh
milestones/1/: README.md  advanced.ch  advanced.out  main.ch
milestones/10/: README.md  array.ch.disabled  mut_array.ch.disabled  string.ch.disabled
milestones/11/: README.md  reflection.ch.disabled
milestones/12/: README.md  lib.ch.disabled  main.ch.disabled
milestones/2/: README.md  test.sh
milestones/3/: README.md  advanced.ch  advanced.out  main.ch  (+2 more)
page/: Cargo.toml  Trunk.toml  index.html  index.scss
page/src/: editor.rs  main.rs
(+29 files in other folders)
