[package]
name = "page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8"
js-sys = "0.3"
yew = { version="0.20", features=["csr"] }
log = "0.4"
wasm-logger = "0.2.0"
# monaco = { features = ["yew-components"] }
monaco = { git = "https://github.com/siku2/rust-monaco.git", features = ["yew-components"] }
wasm-bindgen = "0.2"
eval = {path = "../ichop/eval"}
core ={ path = "../core" }
